  the files written in the spool by ldm (under the noaaport group).

- Revised io.c in the gpfilter/c directory to add the the fopen_xxx
  functions. In particular fopen_output locks the output file
  so that it is safe to execute several instances of nbspfile
  in parallel even in append mode and if the output file is the same. 
  nbspfile was updated to use the new functions.

- Revised the various filters that process the satellite files to
  allow them to process the non-goes data files (i.e., they now process
  ther tixyyy files besides tigyyy).

- Added the ability to specify the queue_read_timeout_ms on a per-client
  basis (via the clientoptions string in nbspd.conf).

2.1.r1 -
======

- Revised nbspmtr plot scripts and tclhttpd metar functions to
  plot the wind direction as well (suggested by Scott <ssshoema@gmail.com>).
- Added -r and -R options to the nbspmtrplot1 script.
- Text files are filetered through tr in the rstfilter to delete cntrl chars.
- Added -e to nbspsat and nbspsatinfo (to extract the lat-lon parameters).
- Added option(s) to set servername to the wildcard address(es).
- Added "digatmos" as default subdir for the catalog extension
  if no suubdir is specified in the /_catalog url.
- Fixed syntax error in filters.lib when processing the new rad files
  (nbspradinfo -> exec nbspradinfo). As a result of the error, the
  rc(rad...) variables were not being properly set for the new files.
  Some of the variables are used in the info files of the gisfilter
  shapefiles.
- Added the gisfilter.
- Added "gis" subdir to the catalog extension - The nids files are
  saved with the WCT naming conventions.
- Completed the gini to shapefile conversion in the nbspgis library.
- Added gini to asc conversion to the nbspgis librray.

2.1.3p4
-
- Added kgge to metarfilter (icao and st files)
- Added linespoints style (ls) keywords to gnuplot templates in metarfilter
- Added inbsp extension for exporting stats data via web interface