@@ -74,14 +74,18 @@ if {[file exists ${_featuresinit}]} {
 ### set ifip
 
 # In FreeBSD the default is 41 KB and the maximum is 221 KB.
-# In linux the default is around 109 KB and the maximum 255 KB.
+# In linux the default is around 109 KB and the maximum 255 KB,
+# but manually setting it would disable autotuning and therefore it is
+# not recommended to change the defaults.
 # In MacOSX the default is 262 KB and the maximum around 7450 KB.
 # In windows the default can be as low as 8 KB, so a setting like
 #
 #     set udprcvsize	[expr 256 * 1024]
 #
-# would be more reasonable. A setting <= 0 leaves the OS default.
+# would be more reasonable.
 #
+# A setting <= 0 leaves the OS defaults.  (See "defaults/nbspd.conf")
+# 
 ### set udprcvsize -1
 
 # These (tcl) scripts are evaluated by the nbspd daemon itself as the last step
