@@ -39,7 +39,7 @@ set gnuplot(script) {
   set style fill solid 1.0
 
   plot \
-      "$gplot(datafile)" using 1:5 notitle with boxes
+      "$gplot(datafile)" using 1:7 notitle with boxes
 
   quit
 }
