@@ -16,6 +16,9 @@
 ### set inventory(plotftransrc) "ftrans.g";
 ### set inventory(plotfretransrc) "fretrans.g";
 ### set inventory(plotfmissrc) "fmiss.g";
+### set inventory(plotframesrcvrc) "framesrcv.g";
+### set inventory(plotframesjumpsrc) "framesjumps.g";
+
 
 #
 # Read the local overrides
